compiler/testData/diagnostics/tests/dataFlowInfoTraversal/Return.jet
fun bar(x: Int): Int = x + 1

fun foo(): Int {
    val x: Int? = null

    bar(<!TYPE_MISMATCH!>x<!>)
    if (x != null) return x
    if (x == null) return if (x != null) x else <!TYPE_MISMATCH!>x<!>
    if (x == null) return x
    if (x != null) return if (x == null) x else x
    return x
}
